--- a/css/styles.css
+++ b/css/styles.css
@@ -5,8 +5,7 @@
 }
 
 body {
-    font-family: ;
-    font-size: ;
+    font-family: 'Poppins', sans-serif;
     color: rgba(12, 12, 12, 0.7);
     background-color: #fbfbfb;
 }
@@ -46,13 +45,22 @@ button {
 }
 
 .container {
-    max-width: 1180;
-    padding: 0 15px;
+    /* max-width: 1180;
+    padding: 0 15px;*/
+    padding: 0 20px;
+    max-width: 375px;
     margin: 0 auto;
 }
 
+.section {
+    padding-top: 60px;
+}
+
+
+
 .header {
-    padding: 26px 0;
+    /* padding: 26px 0;*/
+    padding: 20px 0;
     border-bottom: 1px solid rgba(12, 12, 12, 0.1);
 }
 
@@ -62,12 +70,31 @@ button {
     align-items: center;
 }
 
+.header-nav,
+.social-list {
+    display: none;
+}
+
 .logo {
     font-weight: 500;
-    font-size: 20px;
+    /* font-size: 20px;*/
+    font-size: 16px;
     letter-spacing: -0.02em;
     color: #0c0c0c;
-    padding: 6px 0;
+    /* padding: 6px 0;*/
+    padding: 7px 0;
+}
+
+.burger-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: transparent;
+    padding: 0;
+}
+
+.burger-icon {
+    stroke: #0c0c0c;
 }
 
 .header-list {
@@ -107,7 +134,7 @@ button {
 
 
 
-.social-list {
+/*.social-list {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -124,4 +151,68 @@ button {
     padding: 8px;
     width: 36px;
     height: 36px;
+}*/
+
+
+
+/*HERO*/
+
+.hero-title {
+    font-weight: 600;
+    font-size: 40px;
+    line-height: 0.95;
+    letter-spacing: -0.02em;
+    color: #0c0c0c;
+
+    margin-bottom: 20px;
+}
+
+.hero-title-accent {
+    color: #3350e9;
+}
+
+.hero-text {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.29;
+    letter-spacing: -0.02em;
+    margin-bottom: 28px;
+}
+
+.hero-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: end;
+    margin-bottom: 28px;
+}
+
+.hero-list {
+    display: flex;
+
+}
+
+.hero-item {
+    border-radius: 2px solid #fbfbfb;
+    width: 44px;
+    height: 44px
+}
+
+.hero-item:not(:first-child) {
+    margin-left: -12px;
+}
+
+.hero-link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.28571;
+    letter-spacing: -0.02em;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+    color: #0c0c0c;
+}
+
+.hero-img {
+    display: block;
+    width: 335px;
+    border-radius: 30px;
 }
