--- a/css/styles.css
+++ b/css/styles.css
@@ -216,3 +216,63 @@ button {
     width: 335px;
     border-radius: 30px;
 }
+
+/*ABOUT*/
+
+
+.about-wrapper {
+    background-color: #f3f3f3;
+    border-radius: 30px;
+    max-width: 335px;
+    height: auto;
+    padding: 40px 20px;
+    margin-bottom: 20px;
+}
+
+.about-title {
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 1;
+    letter-spacing: -0.02em;
+    color: #0c0c0c;
+
+    margin-bottom: 28px;
+}
+
+.about-text {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.29;
+    letter-spacing: -0.02em;
+    margin-bottom: 20px;
+}
+
+.about-link {
+    display: inline-block;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.29;
+    text-align: center;
+    color: #fbfbfb;
+
+    background-color: #3350e9;
+    border-radius: 16px;
+    padding: 15px 38px;
+
+    margin-top: 20px;
+}
+
+.about-image-wrapper {
+    border-radius: 30px;
+    width: 335px;
+    height: 446px;
+    overflow: hidden;
+}
+
+.about-image {
+    display: block;
+    width: 100%;
+    height: 100%;
+
+    object-fit: cover;
+}
