--- a/css/styles.css
+++ b/css/styles.css
@@ -276,3 +276,78 @@ button {
 
     object-fit: cover;
 }
+
+/*CATALOG*/
+
+.catalog-title {
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 1;
+    letter-spacing: -0.02em;
+    color: #0c0c0c;
+
+    margin-bottom: 24px;
+}
+
+.catalog-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-bottom: 40px;
+}
+
+.catalog-item {
+    border: 1px solid rgba(12, 12, 12, 0.05);
+    border-radius: 30px;
+    background-color: #f3f3f3;
+
+    padding: 24px 28px;
+
+    width: 335px;
+    overflow: hidden;
+}
+
+.catalog-image-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.catalog-item-subtitle {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: -0.02em;
+    color: #0c0c0c;
+
+    margin-bottom: 8px;
+}
+
+.catalog-item-price {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.29;
+    letter-spacing: -0.02em;
+}
+
+.show-item {
+    display: none;
+}
+
+.catalog-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.28571;
+    text-align: center;
+    color: #fbfbfb;
+
+    border-radius: 16px;
+    background-color: #3350e9;
+    padding: 15px 44px;
+    margin: 0 auto;
+}
