--- a/css/styles.css
+++ b/css/styles.css
@@ -391,3 +391,35 @@ button {
 }
 
 /*SALE*/
+.sale-title {
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 1;
+    letter-spacing: -0.02em;
+    color: #0c0c0c;
+    margin-bottom: 24px;
+}
+
+.sale-list {
+    display: flex;
+    gap: 5px;
+}
+
+.sale-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: calc((100% - 15px) / 4);
+
+    border: 1px solid rgba(12, 12, 12, 0.05);
+    border-radius: 16px;
+    background-color: #f3f3f3;
+    padding: 13px 14px;
+}
+
+.sale-item-image {
+    display: block;
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
