--- a/css/styles.css
+++ b/css/styles.css
@@ -519,3 +519,52 @@ button {
     color: #fbfbfb;
     padding: 7px 11px
 }
+
+/*REVIEWS*/
+.reviews-title {
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 1;
+    letter-spacing: -0.02em;
+    color: #0c0c0c;
+    margin-bottom: 24px;
+}
+
+.reviews-item {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 30px;
+    padding: 32px 36px;
+    width: 335px;
+    height: auto;
+    background-color: #f3f3f3;
+}
+
+.item-close {
+    display: none;
+}
+
+.reviews-image {
+    margin-bottom: 24px;
+}
+
+.reviews-subtitle {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: -0.02em;
+    text-align: center;
+    color: #0c0c0c;
+    margin-bottom: 8px;
+}
+
+.reviews-text {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.29;
+    letter-spacing: -0.02em;
+    text-align: center;
+    color: rgba(12, 12, 12, 0.4);
+}
