--- a/css/styles.css
+++ b/css/styles.css
@@ -535,6 +535,7 @@ button {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     border-radius: 30px;
     padding: 32px 36px;
     width: 335px;
@@ -546,8 +547,16 @@ button {
     display: none;
 }
 
-.reviews-image {
+.reviews-image-wrapper {
+    width: 56px;
+    height: 56px;
     margin-bottom: 24px;
+}
+
+.reviews-image {
+    display: block;
+    width: 100%;
+    height: auto;
 }
 
 .reviews-subtitle {
