--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,19 @@ button {
     cursor: pointer;
 }
 
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+    clip-path: inset(100%);
+    white-space: nowrap;
+    border: 0;
+}
+
 .container {
     /* max-width: 1180;
     padding: 0 15px;*/
@@ -576,4 +589,29 @@ button {
     letter-spacing: -0.02em;
     text-align: center;
     color: rgba(12, 12, 12, 0.4);
+}
+
+/*CONTACT_FORM*/
+.contact-form-title {
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 1;
+    letter-spacing: -0.02em;
+    color: #0c0c0c;
+    margin-bottom: 24px;
+}
+
+.contact-form-text {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.29;
+    letter-spacing: -0.02em;
+    margin-bottom: 28px;
+
+}
+
+.contact-form-wrapper {
+    border-radius: 30px;
+    padding: 48px 28px;
+    background-color: #f3f3f3;
 }
