--- a/css/styles.css
+++ b/css/styles.css
@@ -614,4 +614,53 @@ button {
     border-radius: 30px;
     padding: 48px 28px;
     background-color: #f3f3f3;
+    margin-bottom: 20px;
+}
+
+.form-input {
+    width: 100%;
+    padding: 12px 14px;
+    margin-bottom: 18px;
+    border: 1px solid rgba(12, 12, 12, 0.15);
+    border-radius: 12px;
+    outline: none;
+}
+
+.form-input::placeholder {
+    font-family: "Gilroy", sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.28571;
+    color: #0c0c0c;
+}
+
+.form-btn {
+    padding: 12px 50px;
+    background-color: #3350e9;
+    border-radius: 16px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.29;
+    text-align: center;
+    color: #fbfbfb;
+    margin-top: 10px;
+}
+
+.form-input-comment {
+    height: 84px;
+    resize: none;
+}
+
+.contact-image-wrapper {
+    border-radius: 30px;
+    width: 335px;
+    height: 512px;
+    overflow: hidden;
+}
+
+.contact-form-image {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+
 }
