add background footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -664,3 +664,10 @@ button {
     object-fit: cover;
 
 }
+
+/*FOOTER*/
+.footer-container {
+    background-color: #0c0c0c;
+    border-radius: 30px;
+    padding: 40px 28px;
+}
